syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "Messages/CommonTypes.proto";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.TypeTests";

package grpc_server.api.protos.messages.type_tests;

message IntTestDto {
    int32 int_field = 1;
    repeated int32 int_field_collection = 2;
    google.protobuf.Int32Value int_field_nullable = 3;
    ListOfInt32 int_field_nullable_collection = 4;
}
